css fixes for cart on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -378,7 +378,7 @@ body {
     .btn.btn-outline-black.rounded-0,
     .btn.btn-black.rounded-0 {
         padding: .375rem .375rem;
-    }
+    } /* padding: ;   */ 
 
     .btn.btn-outline-black.rounded-0.btn-lg,
     .btn.btn-black.rounded-0.btn-lg {
@@ -387,8 +387,12 @@ body {
     }
 
     .increment-qty, .decrement-qty {
-        padding: .25rem .5rem !important;
+        padding: 1rem 1rem !important;
     }
+
+.table-resize {
+    font-size: 11px;
+}
 
     .aboutus-address{
         margin-top:11.5%;
@@ -402,6 +406,14 @@ body {
     right: 0;
     width: 100%;
 
+}
+
+.update-link,
+.remove-item{
+ 
+   cursor: pointer;
+   margin: -1%;
+   font-size: 25px;
 }
 
 }
